senpai/tests/cases/error/extern_fn_wrong_arg_type.sen
extern fn sqrt(x: Double) -> Double

fn main():
    let x: I64 = 16
    sqrt(x)
